Moved to using a template for the change notice, added task count in.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@
 	</script>
 
 
+	<!-- Notice Template -->
+	<script type="text/html" id="CN-template">
+		<div style="position: relative">
+			<h3 class="CN-title" data-content="title"></h3>
+			<div class="CN-task-count">
+				Tasks: <span data-content="count"></span>
+			</div>
+		</div>
+		<div class="CN-tasks"></div>
+	</script>
+
+
 	<!-- Part Template -->
 	<script type="text/html" id="part-template">
 		<!-- <img data-src="authorPicture" data-alt="author" data-link-wrap="authorPicture"/> -->
