added filter bar

--- a/index.html
+++ b/index.html
@@ -15,6 +15,40 @@
 			<div id="header-loading" class="hidden">
 				<h3>Loading...</h3>
 			</div>
+			<table>
+			<th>Filter by Change Record</th>
+			<th><form action=""><select name="chRecord">
+			<option value="">all</option>
+			<option value="1">1</option>
+			</select>
+			</form>
+			</th>
+			
+			<th>Filter by Change Notice</th>
+			<th><form action=""><select name="chRecord">
+			<option value="">all</option>
+			<option value="1">1</option>
+			</select>
+			</form>
+			</th>
+			
+			<th>Filter by Change Task</th>
+			<th><form action=""><select name="chRecord">
+			<option value="">all</option>
+			<option value="1">1</option>
+			</select>
+			</form>
+			</th>
+			
+			<th>Filter by Task</th>
+			<th><form action=""><select name="chRecord">
+			<option value="">all</option>
+			<option value="1">1</option>
+			</select>
+			</form>
+			</th>
+			
+			</table>
 			<table id="header-table" class="hidden">
 				<tbody>
 					<tr>
