--- a/index.html
+++ b/index.html
@@ -16,34 +16,30 @@
 				<h3>Loading...</h3>
 			</div>
 			<table>
-			<th>Filter by Change Record</th>
-			<th><form action=""><select name="chRecord">
+			<th>Filter by Users</th>
+			<th><form action=""><select name="dropUser" id="dropUser">
 			<option value="">all</option>
-			<option value="1">1</option>
 			</select>
 			</form>
 			</th>
 			
-			<th>Filter by Change Notice</th>
+			<th>Filter by Date</th>
 			<th><form action=""><select name="chRecord">
 			<option value="">all</option>
-			<option value="1">1</option>
 			</select>
 			</form>
 			</th>
 			
-			<th>Filter by Change Task</th>
+			<th>Filter by Part</th>
 			<th><form action=""><select name="chRecord">
 			<option value="">all</option>
-			<option value="1">1</option>
 			</select>
 			</form>
 			</th>
 			
-			<th>Filter by Task</th>
+			<th>Filter by XXX</th>
 			<th><form action=""><select name="chRecord">
 			<option value="">all</option>
-			<option value="1">1</option>
 			</select>
 			</form>
 			</th>
