Moving CT to using a template.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	<div id="record-div"></div>
 
 
-	<!-- Record Template -->
+	<!-- Change Record Template -->
 	<script type="text/html" id="CR-template">
 		<div style="position: relative">
 			<h3 class="CR-title" data-content="title"></h3>
@@ -83,7 +83,7 @@
 	</script>
 
 
-	<!-- Notice Template -->
+	<!-- Change Notice Template -->
 	<script type="text/html" id="CN-template">
 		<div style="position: relative">
 			<h3 class="CN-title" data-content="title"></h3>
@@ -92,6 +92,39 @@
 			</div>
 		</div>
 		<div class="CN-tasks"></div>
+	</script>
+
+
+	<!-- Change Task Template -->
+	<script type="text/html" id="CT-template">
+		<div style="position: relative">
+			<h3 class="CT-title" data-content="title"></h3>
+			<div class="CT-part-count">
+				Parts: <span data-content="count"></span>
+			</div>
+		</div>
+		<div class="CT-parts">
+			<table>
+				<tbody>
+					<tr id="partRow">
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	</script>
 
 
