User-Task blocks are now visible below the part table in each change task, though not filled in.

--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
 				</tbody>
 			</table>
 		</div>
+		<div class="CT-block-container">
+
+		</div>
 	</script>
 
 
@@ -162,6 +165,19 @@
 					<br>
 						<span data-content="status"></span><br>
 				</div>
+	</script>
+
+
+	<!-- Block Template -->
+	<script type="text/html" id="block-template">
+		<div class="block-header">
+			<span class="block-user" data-content="user"></span>
+			<br>
+			<span class="block-task" data-content="task"></span>
+		</div>
+		<div class="block-content">
+		
+		</div>
 	</script>
 
 
