added dropdown population to users,status

--- a/index.html
+++ b/index.html
@@ -17,32 +17,34 @@
 			</div>
 			<table>
 			<th>Filter by Users</th>
-			<th><form action=""><select name="dropUser" id="dropUser">
-			<option value="">all</option>
+			<th><form action=""><select name="dropUser" >
+			<option value="">all(default)</option>
 			</select>
 			</form>
 			</th>
 			
-			<th>Filter by Date</th>
-			<th><form action=""><select name="chRecord">
-			<option value="">all</option>
+			<th>Filter by Status</th>
+			<th><form action=""><select name="dropStatus">
+			<option value="">all(default)</option>
 			</select>
 			</form>
 			</th>
 			
-			<th>Filter by Part</th>
-			<th><form action=""><select name="chRecord">
-			<option value="">all</option>
+			<th>Filter by Task</th>
+			<th><form action=""><select name="dropTask">
+			<option value="">all(default)</option>
 			</select>
 			</form>
 			</th>
 			
-			<th>Filter by XXX</th>
-			<th><form action=""><select name="chRecord">
-			<option value="">all</option>
+			<th>Filter by Current State</th>
+			<th><form action=""><select name="dropCurrentState">
+			<option value="">all(default)</option>
 			</select>
 			</form>
 			</th>
+			
+			<th><button>filter</button></th>
 			
 			</table>
 			<table id="header-table" class="hidden">
