added filtering button function,currently useless

--- a/index.html
+++ b/index.html
@@ -18,33 +18,33 @@
 			<table>
 			<th>Filter by Users</th>
 			<th><form action=""><select name="dropUser" >
-			<option value="">all(default)</option>
+			<option value=""></option>
 			</select>
 			</form>
 			</th>
 			
 			<th>Filter by Status</th>
 			<th><form action=""><select name="dropStatus">
-			<option value="">all(default)</option>
+			<option value=""></option>
 			</select>
 			</form>
 			</th>
 			
 			<th>Filter by Task</th>
 			<th><form action=""><select name="dropTask">
-			<option value="">all(default)</option>
+			<option value=""></option>
 			</select>
 			</form>
 			</th>
 			
 			<th>Filter by Current State</th>
 			<th><form action=""><select name="dropCurrentState">
-			<option value="">all(default)</option>
+			<option value=""></option>
 			</select>
 			</form>
 			</th>
 			
-			<th><button>filter</button></th>
+			<th><button name="filterButton">filter</button></th>
 			
 			</table>
 			<table id="header-table" class="hidden">
