--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 			</form>
 			</th>
 			
-			<th><button name="filterButton">filter</button></th>
+			<th><input type="text" id="filterBox"></th>
+			
+			<th><button id="filterButton">filter</button></th>
 			
 			</table>
 			<table id="header-table" class="hidden">
