Part rows are now displayed in User-Task blocks.

--- a/index.html
+++ b/index.html
@@ -198,5 +198,13 @@
 	</script>
 
 
+	<!-- Part Row Template -->
+	<script type="text/html" id="part-row-template">
+		<span data-content="status"></span>
+		<br>
+		<span data-content="objectDescription"></span>
+	</script>
+
+
 </body>
 </html>
