--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 	<!-- Change Notice Template -->
 	<script type="text/html" id="CN-template">
 		<div style="position: relative">
-			<h3 class="CN-title"><span data-content="id"></span> - <span data-content="task"></span></h3>
+			<h3 class="CN-title"><span data-content="id"></span><span data-content="task"></span></h3>
 			<div class="CN-task-count">
 				Tasks: <span data-content="count"></span>
 			</div>
@@ -156,32 +156,32 @@
 				<div data-content="date"></div>
 				<div data-content="post" data-format="sameCaseFormatter" data-format-template="upper"></div>
 			-->
-				<div class="part-header">
-					<span class="part-id" data-content="id"></span>
-				</div>
-				<div class="part-content">
-					<strong>Task</strong>
-					<br>
-						<span data-content="task"></span><br>
-					<strong>Current State</strong>
-					<br>
-						<span data-content="currentState"></span><br>
-					<strong>User</strong>
-					<br>
-						<span data-content="user"></span><br>
-					<strong>Role</strong>
-					<br>
-						<span data-content="role"></span><br>
-					<strong>Created</strong>
-					<br>
-						<span data-content="created"></span><br>
-					<strong>Last Modified</strong>
-					<br>
-						<span data-content="lastModified"></span><br>
-					<strong>Status</strong>
-					<br>
-						<span data-content="status"></span><br>
-				</div>
+			<div class="part-header">
+				<span class="part-id" data-content="id"></span>
+			</div>
+			<div class="part-content">
+				<strong>Task</strong>
+				<br>
+					<span data-content="task"></span><br>
+				<strong>Current State</strong>
+				<br>
+					<span data-content="currentState"></span><br>
+				<strong>User</strong>
+				<br>
+					<span data-content="user"></span><br>
+				<strong>Role</strong>
+				<br>
+					<span data-content="role"></span><br>
+				<strong>Created</strong>
+				<br>
+					<span data-content="created"></span><br>
+				<strong>Last Modified</strong>
+				<br>
+					<span data-content="lastModified"></span><br>
+				<strong>Status</strong>
+				<br>
+					<span data-content="status"></span><br>
+			</div>
 	</script>
 
 
