Upgraded filtering, code cleanup.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			
 			<th><input type="text" id="filterBox"></th>
 			
-			<th><button id="filterButton">filter</button></th>
+			<th><button id="filterButton">Filter</button></th>
 			
 			</table>
 			<table id="header-table" class="hidden">
