added reset button, filter when enter pressed

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 			<th><input type="text" id="filterBox"></th>
 			
 			<th><button id="filterButton">Filter</button></th>
-			
+			<th><button id="resetButton">Reset</button></th>
+
 			</table>
 			<table id="header-table" class="hidden">
 				<tbody>
