user block updates

--- a/index.html
+++ b/index.html
@@ -201,6 +201,10 @@
 			<span class="block-user" data-content="user"></span>
 			<br>
 			<span class="block-task" data-content="task"></span>
+			<br>
+			<span class="block-parts" data-content="parts"></span>
+			<br>
+			<span class="block-days" data-content="days"></span>
 		</div>
 					</td>
 					<td></td>
