added columns to partslist

--- a/index.html
+++ b/index.html
@@ -228,6 +228,9 @@
 			<tr>
 				<th>Object Description</th>
 				<th>Status</th>
+				<th>Current State</th>
+				<th>User</th>
+				<th>Role</th>
 			</tr>
 			</tbody>
 		</table>
@@ -239,6 +242,10 @@
 			<td data-content="objectDescription"></td>
 			
 			<td data-content="status"></td>
+
+			<td data-content="currentState"></td>
+			<td data-content="user"></td>
+			<td data-content="role"></td>		
 	</script>
 
 
