Fixed filtering when not loaded, fixed part list table styling.

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
 	<!-- Block Template -->
 	<script type="text/html" id="block-template">
-		<table>
+		<table class="block-header-table">
 			<tbody>
 				<tr id="partRow">
 					<td>
@@ -223,8 +223,8 @@
 				</tr>
 			</tbody>
 		</table>
-		<table>
-			<tbody class="block-content"> 
+		<table class="block-content">
+			<tbody> 
 			<tr>
 				<th>Object Description</th>
 				<th>Status</th>
