Some fixes, removing dead code.

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 	<script type="text/html" id="block-template">
 		<table class="block-header-table">
 			<tbody>
-				<tr id="partRow">
+				<tr class="partRow">
 					<td></td>
 					<td></td>
 					<td></td>
