Removing dead code

--- a/index.html
+++ b/index.html
@@ -139,44 +139,6 @@
 		</div>
 	</script>
 
-
-	<!-- Part Template -->
-	<script type="text/html" id="part-template">
-		<!-- <img data-src="authorPicture" data-alt="author" data-link-wrap="authorPicture"/> -->
-			<!--
-				<div data-content="author"></div>
-				<div data-content="date"></div>
-				<div data-content="post" data-format="sameCaseFormatter" data-format-template="upper"></div>
-			-->
-			<div class="part-header">
-				<span class="part-id" data-content="id"></span>
-			</div>
-			<div class="part-content">
-				<strong>Task</strong>
-				<br>
-					<span data-content="task"></span><br>
-				<strong>Current State</strong>
-				<br>
-					<span data-content="currentState"></span><br>
-				<strong>User</strong>
-				<br>
-					<span data-content="user"></span><br>
-				<strong>Role</strong>
-				<br>
-					<span data-content="role"></span><br>
-				<strong>Created</strong>
-				<br>
-					<span data-content="created"></span><br>
-				<strong>Last Modified</strong>
-				<br>
-					<span data-content="lastModified"></span><br>
-				<strong>Status</strong>
-				<br>
-					<span data-content="status"></span><br>
-			</div>
-	</script>
-
-
 	<!-- Block Template -->
 	<script type="text/html" id="block-template">
 		<table class="block-header-table">
@@ -211,17 +173,16 @@
 		</table>
 	</script>
 
-
-
 	<!-- Block Header Template -->
 	<script type="text/html" id="block-header-template">
-						<span class="block-user" data-content="user"></span>
-						<br>
-						<span class="block-task" data-content="task"></span>
-						<br>
-						<span class="block-parts" data-content="parts"></span>
-						<br>
-						<span class="block-days" data-content="days"></span>
+		<!-- TODO: Lay this data out in a better format -->
+		<span class="block-user" data-content="user"></span>
+		<br>
+		<span class="block-task" data-content="task"></span>
+		<br>
+		<span class="block-parts" data-content="parts"></span>
+		<br>
+		<span class="block-days" data-content="days"></span>
 	</script>
 
 	<!-- Part Row Template -->
