added yellow and enter pressed anywhere filters

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						</form>
 						</th>-->
 						<td>
-							<input type="text" id="filterBox">
+							<input type="text" autofocus="autofocus" id="filterBox">
 						</td>
 						<td>
 							<button id="filterButton">Filter</button>
