Cleaning up some code, added part row coloring.

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 		<td data-content="objectDescription"></td>
 		<td data-content="currentState"></td>
 		<td data-content="user"></td>
-		<td data-content="created"></td>
+		<td data-content="daysLate"></td>
 	</script>
 
 
