Late block counts are shown.

--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
 		<div style="position: relative">
 			<h3 class="CT-title"><span data-content="id"></span> - <span data-content="task"></span></h3>
 			<div class="CT-part-count">
-				Parts: <span data-content="count"></span>
+				Blocks: <span data-content="count"></span>
+				<span class="lateCountSpan hidden"> - Late: <span class="lateCount" data-content="lateCount"></span></span>
 			</div>
 		</div>
 		<div class="CT-parts">
