All late counts are now shown.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 			<h3 class="CR-title" data-content="title"></h3>
 			<div class="CR-notice-count">
 				Notices: <span data-content="count"></span>
+				<span class="lateCountSpan hidden"> - Late: <span class="lateCount" data-content="lateCount"></span></span>
 			</div>
 		</div>
 		<div class="CR-notices"></div>
@@ -105,6 +106,7 @@
 			<h3 class="CN-title"><span data-content="id"></span><span data-content="task"></span></h3>
 			<div class="CN-task-count">
 				Tasks: <span data-content="count"></span>
+				<span class="lateCountSpan hidden"> - Late: <span class="lateCount" data-content="lateCount"></span></span>
 			</div>
 		</div>
 		<div class="CN-tasks">
